--- a/components/plans.html
+++ b/components/plans.html
@@ -1,4 +1,4 @@
-<div class="plan">
+<div class="plan plan--popular">
   <div style="width: 50%; padding: 4rem">
     <div class="card card--secondary">
       <header class="card__header">
